Work on UI; process links in user-submitted text

--- a/src/components/Avatar.pug
+++ b/src/components/Avatar.pug
@@ -1,11 +1,6 @@
 script.
 	export feed = null
-	export user = null
 
-{#if feed}
-	{#if feed.flags.pure}
-		a.h-24.flex.justify-center.items-center.bg-green-300(href={feed.href}) {feed.id}
-	{:else}
-		a.h-24.flex.justify-center.items-center.bg-purple-300(href={feed.href}) {feed.id}
-{:else if user}
-	a.w-24.h-24.flex.justify-center.items-center.bg-red-500.text-6xl(href={user.href}) 🎇
+a.inline-flex.items-baseline.opacity-50(href={feed.href} class='hover:opacity-100')
+	span.inline-block.px-4.text-white.border.border-black.rounded {feed.domain}
+	span.text-black {feed.subdomain}
