--- a/src/views/V_Comments.pug
+++ b/src/views/V_Comments.pug
@@ -1,10 +1,25 @@
 script.
 	export comments = []
+	import RedditComment from '/src/objects/RedditComment'
 	import Comment from '/src/components/Comment'
+	treeScore = (comment) -> comment.replies.fold(0, (a, b) -> a + treeScore(b)) + Math.abs(comment.stats.score)
+	topLevelScore = comments.fold(0, (a,b) -> a + (if b.flags.scoreHidden then 0 else Math.abs(b.stats.score)))
+	topLevelScorePercent = (comment) -> switch
+		when comment.flags.scoreHidden then '~'
+		when topLevelScore < 1 then '0'
+		else Math.trunc(100 * comment.stats.score / topLevelScore)
 
-.overflow-auto
-	{#each comments as topLevelComment}
-		Comment(comment={topLevelComment})
+.m-16
+	{#each comments as topLevelComment, i}
+		.top-level-comment
+			.text-6xl
+				span {topLevelScorePercent(topLevelComment)}
+			div
+				Comment(comment={topLevelComment})
 	{:else}
-		#nocomments
-			button#add-first-comment ADD THE FIRST COMMENT
+		span No comments.
+
+style.
+	.top-level-comment
+		display grid
+		grid-template-columns 32px 1fr
