--- a/src/views/V_Gallery.pug
+++ b/src/views/V_Gallery.pug
@@ -1,65 +1,54 @@
 script.
 	export images = []
-	i = 0
-	KeyMap.KeyE =
-		n: 'Media: Enlarge'
-	KeyMap.KeyF =
-		n: 'Media: Fullscreen'
-	KeyMap.KeyO =
-		n: 'Media: Open Original Source'
-		d: () => window.open(images[i].url_full)
-	KeyMap.KeyA =
-		n: 'Gallery: Previous Image'
-		d: () => if i > 0 then i -= 1
-	KeyMap.KeyD =
-		n: 'Gallery: Next Image'
-		d: () => if i < images.length - 1 then i += 1
+	designWidth = 736
+	designHeight = designWidth
+	expanded = -1
+	import Link from '/src/components/Link'
 
-figure.relative.h-full.w-full.flex.flex-col.justify-center.items-center
-	menu.overlay.top-0.left-0.flex.flex-wrap
-		{#each images as image, j}
-			button.h-32.w-32.flex.justify-center.align-center(on:click={() => i = j})
-				{#if j === i}
-					data.relative.w-full.h-full.flex.justify-center.items-center
-						span.absolute.top-0.left-0.text-8xl {j + 1}
-						span.text-8xl ／
-						span.absolute.bottom-0.right-0.text-6xl {images.length}
+{#each images as image, i}
+	figure.m-16
+		.flex.justify-between
+			data {i + 1} of { images.length }
+			data
+				{#if expanded === i}
+					table
+						colgroup
+							tcol
+							tcol.text-right
+						tr
+							td rendered size
+							td {image.bestFit(designWidth, designHeight).width} × {image.bestFit(designWidth, designHeight).height}
+						tr
+							td
+								Link(href={image.largest().url}) original size
+							td {image.largest().width} × {image.largest().height}
+						tr
+							td scale
+							td.text-8xl {Math.trunc(100 * designWidth / image.largest().width) + '%'}
 				{:else}
-					img.thumbnail(src={image.bestFit(27, 27).url} alt='thumbnail {j + 1}')
-	{#each images as image}
-		img(src={image.bestFit(960, 960).url} alt='TODO')
-	data.overlay.bottom-0.right-0.p-8
-		table
-			colgroup
-				tcol
-				tcol.text-right
-			tr
-				td rendered size
-				td {images[i].bestFit(960, 960).width} × {images[i].bestFit(960, 960).height}
-			tr
-				td
-					a(href={images[i].largest().url} target='_blank' rel='noopener') original size
-				td {images[i].largest().width} × {images[i].largest().height}
-			tr
-				td scale
-				td.text-8xl {images[i].bestFit(960, 960).width === images[i].largest().width ? 'Max' : Math.trunc(100 * images[i].bestFit(960, 960).width / images[i].largest().width) + '%'}
-	{#if images[i].caption || images[i].link}
-		figcaption.overlay.bottom-0.left-0.p-8
-			{#if images[i].caption}
-				section
-					div caption
-					.text-6xl {images[i].caption}
-			{#if images[i].link}
-				section
-					div link
-					a(href={images[i].link}).text-4xl {(new URL(images[i].link)).href}
+					| {Math.trunc(100 * designWidth / image.largest().width) + '%'} of
+					Link(href={image.largest().url} desc='Click to open original image in a new tab') original size
+		img.border.border-black(src={image.bestFit(designWidth, designHeight).url} alt='TODO')
+		{#if image.caption || image.link}
+			{#if expanded === i }
+				figcaption.overlay.bottom-0.left-0
+						{#if image.caption}
+							section
+								div caption
+								.text-6xl {image.caption}
+						{#if image.link}
+							section
+								div link
+								Link(href={image.link}).text-4xl {(new URL(image.link)).href}
+			{:else}
+				figcaption
+					.flex.justify-between
+						{#if image.caption}
+							| {image.caption}
+						{#if image.link}
+							Link(href={image.link}) {image.link}
 
 style.
-	.thumbnail
-		height 27px
-		width 27px
-		object-fit cover
-	.overlay
-		position absolute
-		color white
-		background black
+	img
+		max-height 900px
+		cursor zoom-in
