--- a/src/views/V_Main.pug
+++ b/src/views/V_Main.pug
@@ -15,9 +15,9 @@ script.
 	selectedStory = null
 
 main
-	{#if selectedStory}
-		{#if selectedStory instanceof RedditPost}
-			.h-full
+	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.items-end
+		{#if selectedStory}
+			{#if selectedStory instanceof RedditPost}
 				FETCH(let:v p={selectedStory.data})
 					{#if v.content.type === 'comment'}
 						FETCH(let:v p={v.content.post.data})
@@ -30,40 +30,32 @@ main
 						V_Gallery(images={v.content.images})
 					{:else}
 						article {v.content.type}
-		{:else if selectedStory instanceof RedditComment}
-			p COMMENT
-		{:else if selectedStory instanceof RedditMessage}
-			p MESSAGE
-	{:else}
-		.border-4.border-gray-400.h-full.col-span-2
+			{:else if selectedStory instanceof RedditComment}
+				p COMMENT
+			{:else if selectedStory instanceof RedditMessage}
+				p MESSAGE
+	.h-full.flex.flex-col
+		.relative.h-96
 			FETCH(let:v p={feed.about()})
-				{#if v}
-					img(src={v.banner_background_image || v.banner_img} alt='TODO')
-					article
-						{@html v.description_html}
-	.border-4.border-gray-400.h-full.flex.flex-col
-		.h-64.border-b-4.border-gray-300.flex
-			FETCH(let:v p={feed.about})
-				img.h-64.w-64.border-2.border-black.bg-gray-200(src={v.community_icon} alt='TODO')
-			.flex-grow.p-8
+				.absolute.h-full.w-full(style='background-image: url({v.banner_background_image || v.banner_img}); background-size: cover')
+			.border.border-black.p-8
 				div now viewing
-				h1.text-8xl.inline-flex.items-baseline
-					span.inline-block.px-8.py-4.text-white(style='background: {feed.color}') {feed.domain}
-					span {feed.subdomain}
-			FETCH(let:v p={feed.about})
-				.w-64
-					div Online
-					data.text-6xl {v.accounts_active || 4932}
-					div Subscribers
-					data.text-6xl {v.subscribers || 1583902}
-		ol.border-b-4.border-gray-300.flex-grow.overflow-auto
+				h1.inline-flex.items-center
+					span.inline-block.px-4.py-2.border.border-black.text-5xl {feed.domain}
+					span.text-6xl {feed.subdomain}
+				FETCH(let:v p={feed.about})
+					{#if feed.domain === 'u'}
+						div {(v.link_karma + v.comment_karma) || 12912} karma
+					{:else}
+						div {v.accounts_active || 4932} online, {v.subscribers || 1583902} subscribers
+		ol.flex-grow.overflow-auto.hide-scrollbar.list-none
 			{#each feed.fragments as fragment}
 				FETCH(let:v p={fragment()})
 					{#each v as story}
-						li.border.border-gray-200(on:mousedown={() => selectedStory = story})
+						li.m-16(on:mousedown={() => selectedStory = story})
 							{#if story instanceof RedditPost}
 								FETCH(let:v p={story.data})
-									Post(post={v})
+									Post(post={v} showNativeFeed={feed.id !== v.nativeFeed.id} showTitleFlair={true})
 							{:else if story instanceof RedditComment}
 								Comment(comment={story})
 							{:else if story instanceof RedditMessage}
@@ -71,22 +63,23 @@ main
 							{:else}
 								.error-tag UNKNOWN ITEM
 								.error-message {story.toString()}
-		nav.h-96.border-b-4.border-gray-300
+		nav.h-96
 			ol.flex.flex-wrap
 				{#each account.subscriptions.users as user}
 					li
-						Avatar(user={user})
-				{#each account.subscriptions.feeds as feed}
+						Avatar(feed={user})
+				{#each account.subscriptions.subreddits as subreddit}
 					li
-						Avatar(feed={feed})
-		nav.h-64.flex
-			a.w-64.h-64.bg-yellow-500.flex.justify-center.items-center.text-8xl(href='/') 🎇
+						Avatar(feed={subreddit})
+		nav.h-48.border.border-black.p-8
 			#quick-settings
 				label Show NSFW
 					input(type='checkbox' checked)
-	{#if selectedStory}
-		{#if selectedStory instanceof RedditPost}
-			.h-full
+			span logged in as
+			Avatar(feed={account.me})
+	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.items-start
+		{#if selectedStory}
+			{#if selectedStory instanceof RedditPost}
 				FETCH(let:v p={selectedStory.data})
 					FETCH(let:v p={v.comments})
 						V_Comments(comments={v})
