--- a/src/views/V_Root.pug
+++ b/src/views/V_Root.pug
@@ -6,26 +6,27 @@ script.
 	import V_MouseMenu from '/src/views/V_MouseMenu'
 	# Initialize.
 	currentAccount =
+		me: new RedditFeed({ fromId: 'u/caseyross' })
 		subscriptions:
-			feeds: [
-				'r/all'
-				'r/popular'
-				'r/fireemblem'
-				'r/onebag'
-				'r/gonewild'
-				'r/tulsa'
-				'r/genshin_impact'
-				'r/buildapcsales'
-				'r/namenerds'
-				'r/singapore'
-				'r/postprocessing'
-				'r/manybaggers'
-			].sort((a, b) -> if a < b then -1 else 1).map((id) -> new RedditFeed({ fromId: id }))
+			subreddits: [
+				'all'
+				'popular'
+				'fireemblem'
+				'onebag'
+				'gonewild'
+				'tulsa'
+				'genshin_impact'
+				'buildapcsales'
+				'namenerds'
+				'singapore'
+				'postprocessing'
+				'manybaggers'
+			].sort((a, b) -> if a < b then -1 else 1).map((id) -> new RedditFeed({ fromId: 'r/' + id }))
 			users: [
 				'spez'
 				'kn0thing'
 				'gallowboob'
-			].sort((a, b) -> if a < b then -1 else 1).map((name) -> new RedditUser(name))
+			].sort((a, b) -> if a < b then -1 else 1).map((name) -> new RedditFeed({ fromId: 'u/' + name }))
 	currentFeed = new RedditFeed({ fromUrl: window.location })
 	# Hot load internal links.
 	document.addEventListener 'click',
