--- a/src/views/V_Gallery.pug
+++ b/src/views/V_Gallery.pug
@@ -8,7 +8,6 @@ script.
 {#each images as image, i}
 	figure.m-16
 		.flex.justify-between
-			data {i + 1} of { images.length }
 			data
 				{#if expanded === i}
 					table
@@ -28,6 +27,7 @@ script.
 				{:else}
 					| {Math.trunc(100 * designWidth / image.largest().width) + '%'} of
 					Link(href={image.largest().url} desc='Click to open original image in a new tab') original size
+			data {i + 1} of { images.length }
 		img.border.border-black(src={image.bestFit(designWidth, designHeight).url} alt='TODO')
 		{#if image.caption || image.link}
 			{#if expanded === i }
@@ -35,18 +35,17 @@ script.
 						{#if image.caption}
 							section
 								div caption
-								.text-6xl {image.caption}
+								.text-beta {image.caption}
 						{#if image.link}
 							section
 								div link
-								Link(href={image.link}).text-4xl {(new URL(image.link)).href}
+								Link(href={image.link}).text-beta {(new URL(image.link)).href}
 			{:else}
 				figcaption
-					.flex.justify-between
-						{#if image.caption}
-							| {image.caption}
-						{#if image.link}
-							Link(href={image.link}) {image.link}
+					{#if image.caption}
+						| {image.caption}
+					{#if image.link}
+						Link(href={image.link}) {image.link}
 
 style.
 	img
