--- a/src/views/V_Main.pug
+++ b/src/views/V_Main.pug
@@ -35,24 +35,21 @@ main
 			{:else if selectedStory instanceof RedditMessage}
 				p MESSAGE
 	.h-full.flex.flex-col
-		.relative.h-96
-			FETCH(let:v p={feed.about()})
-				.absolute.h-full.w-full(style='background-image: url({v.banner_background_image || v.banner_img}); background-size: cover')
-			.border.border-black.p-8
-				div now viewing
-				h1.inline-flex.items-center
-					span.inline-block.px-4.py-2.border.border-black.text-5xl {feed.domain}
-					span.text-6xl {feed.subdomain}
-				FETCH(let:v p={feed.about})
-					{#if feed.domain === 'u'}
-						div {(v.link_karma + v.comment_karma) || 12912} karma
-					{:else}
-						div {v.accounts_active || 4932} online, {v.subscribers || 1583902} subscribers
-		ol.flex-grow.overflow-auto.hide-scrollbar.list-none
+		.h-64.border-b.border-dashed.border-black.p-8.bg-gray-300
+			div now viewing
+			h1.inline-flex.items-center
+				span.inline-block.px-4.py-2.border.border-black.text-beta {feed.domain}
+				span.text-alpha {feed.subdomain}
+			FETCH(let:v p={feed.about})
+				{#if feed.domain === 'u'}
+					div {(v.link_karma + v.comment_karma) || 12912} karma
+				{:else}
+					div {v.accounts_active || 4932} online, {v.subscribers || 1583902} subscribers
+		ol.flex-grow.overflow-auto.hide-scrollbar.py-8
 			{#each feed.fragments as fragment}
 				FETCH(let:v p={fragment()})
 					{#each v as story}
-						li.m-16(on:mousedown={() => selectedStory = story})
+						li.m-4(on:mousedown={() => selectedStory = story} class={selectedStory === story ? 'selected-story' : ''})
 							{#if story instanceof RedditPost}
 								FETCH(let:v p={story.data})
 									Post(post={v} showNativeFeed={feed.id !== v.nativeFeed.id} showTitleFlair={true})
@@ -63,21 +60,21 @@ main
 							{:else}
 								.error-tag UNKNOWN ITEM
 								.error-message {story.toString()}
-		nav.h-96
-			ol.flex.flex-wrap
+		nav.h-96.border-t.border-dashed.border-black.px-4.py-8.overflow-auto.hide-scrollbar.bg-gray-100
+			ol.flex.flex-wrap.list-none
 				{#each account.subscriptions.users as user}
 					li
 						Avatar(feed={user})
 				{#each account.subscriptions.subreddits as subreddit}
 					li
 						Avatar(feed={subreddit})
-		nav.h-48.border.border-black.p-8
+		nav.h-48.border-t.border-dashed.border-black.px-4.py-8.bg-gray-300
 			#quick-settings
 				label Show NSFW
 					input(type='checkbox' checked)
 			span logged in as
 			Avatar(feed={account.me})
-	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.items-start
+	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.items-start.py-16
 		{#if selectedStory}
 			{#if selectedStory instanceof RedditPost}
 				FETCH(let:v p={selectedStory.data})
@@ -88,5 +85,7 @@ style.
 	main
 		height 100vh
 		display grid
-		grid-template-columns 40% 20% 40%
+		grid-template-columns 43.5% 13% 43.5%
 		grid-template-rows 100%
+	.selected-story
+		background cornsilk
