--- a/src/views/V_Main.pug
+++ b/src/views/V_Main.pug
@@ -35,7 +35,7 @@ main
 			{:else if selectedStory instanceof RedditMessage}
 				p MESSAGE
 	.h-full.flex.flex-col
-		.h-64.border-b.border-dashed.border-black.p-8.bg-gray-300
+		.h-64.border-b.border-dashed.border-black.p-8
 			div now viewing
 			h1.inline-flex.items-center
 				span.inline-block.px-4.py-2.border.border-black.text-beta {feed.domain}
@@ -45,11 +45,12 @@ main
 					div {(v.link_karma + v.comment_karma) || 12912} karma
 				{:else}
 					div {v.accounts_active || 4932} online, {v.subscribers || 1583902} subscribers
-		ol.flex-grow.overflow-auto.hide-scrollbar.py-8
+		ol.stories.p-8.list-none
 			{#each feed.fragments as fragment}
 				FETCH(let:v p={fragment()})
-					{#each v as story}
-						li.m-4(on:mousedown={() => selectedStory = story} class={selectedStory === story ? 'selected-story' : ''})
+					{#each v as story, storyIndex}
+						li.m-4.flex(on:mousedown={() => selectedStory = story} class={selectedStory === story ? 'selected-story' : ''})
+							.w-16.h-16.bg-black.text-white.text-right {storyIndex + 1}
 							{#if story instanceof RedditPost}
 								FETCH(let:v p={story.data})
 									Post(post={v} showNativeFeed={feed.id !== v.nativeFeed.id} showTitleFlair={true})
@@ -60,20 +61,6 @@ main
 							{:else}
 								.error-tag UNKNOWN ITEM
 								.error-message {story.toString()}
-		nav.h-96.border-t.border-dashed.border-black.px-4.py-8.overflow-auto.hide-scrollbar.bg-gray-100
-			ol.flex.flex-wrap.list-none
-				{#each account.subscriptions.users as user}
-					li
-						Avatar(feed={user})
-				{#each account.subscriptions.subreddits as subreddit}
-					li
-						Avatar(feed={subreddit})
-		nav.h-48.border-t.border-dashed.border-black.px-4.py-8.bg-gray-300
-			#quick-settings
-				label Show NSFW
-					input(type='checkbox' checked)
-			span logged in as
-			Avatar(feed={account.me})
 	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.items-start.py-16
 		{#if selectedStory}
 			{#if selectedStory instanceof RedditPost}
@@ -85,7 +72,10 @@ style.
 	main
 		height 100vh
 		display grid
-		grid-template-columns 43.5% 13% 43.5%
+		grid-template-columns 42% 16% 42%
 		grid-template-rows 100%
 	.selected-story
 		background cornsilk
+	.stories
+		background: #eee
+		border: 1px solid gray
