--- a/src/views/Inspector.pug
+++ b/src/views/Inspector.pug
@@ -28,25 +28,25 @@ script.
 	]
 	sort = (entries) ->
 		entries.sort (a, b) -> (order.indexOf(category a[1]) - order.indexOf(category b[1])) + ((a[0] > b[0]) - 0.5)
-	formatKey = (key) -> if key.length > 16 then key[...15] + '<' else key.padStart 16
-	formatValue = (value) -> if String(value).length > 16 then String(value)[...15] + '<' else String(value).padEnd 16
+	format_key = (key) -> if key.length > 16 then key[...15] + '<' else key.padStart 16
+	format_value = (value) -> if String(value).length > 16 then String(value)[...15] + '<' else String(value).padEnd 16
 	collapsed = category(value) is 'object' and Object.keys(value).length > 16
 
 {#if category(value) === 'promise'}
 	{#await value}
-		li(title={value} style='color: {color(value)}') {formatKey(key) + '*<pending>'}
-	{:then fulfilledValue}
-		svelte:self(key={key} value={fulfilledValue})
+		li(title={value} style='color: {color(value)}') {format_key(key) + '*<pending>'}
+	{:then fulfilled_value}
+		svelte:self(key={key} value={fulfilled_value})
 	{:catch error}
-		li(title={value} style='color: {color(value)}') {formatKey(key) + '*<rejected>'}
+		li(title={value} style='color: {color(value)}') {format_key(key) + '*<rejected>'}
 {:else if category(value) === 'object'}
 	.object(class:collapsed on:click|stopPropagation={e => collapsed = !collapsed})
-		.object-name {formatKey(key)}:
+		.object-name {format_key(key)}:
 		ol
-			{#each sort(Object.entries(value)) as [nestedKey, nestedValue]}
-				svelte:self(key={nestedKey} value={nestedValue})
+			{#each sort(Object.entries(value)) as [nested_key, nested_value]}
+				svelte:self(key={nested_key} value={nested_value})
 {:else}
-	li(on:auxclick={() => navigator.clipboard.writeText(value)} title='{key}={value}' style='color: {color(value)}') {formatKey(key) + '=' + formatValue(value)}
+	li(on:auxclick={() => navigator.clipboard.writeText(value)} title='{key}={value}' style='color: {color(value)}') {format_key(key) + '=' + format_value(value)}
 
 style.
 	.object
