--- a/src/views/Score.pug
+++ b/src/views/Score.pug
@@ -2,7 +2,7 @@ script.
 	export score = 'score unknown'
 	text = switch
 		when score > 0 then '+' + score
-		when score is 0 then '=0'
+		when score is 0 then '0'
 		else score
 
 data(value={score}) {text}
