--- a/src/views/Main.pug
+++ b/src/views/Main.pug
@@ -3,7 +3,7 @@ script.
 	import { PROMISE } from './effects'
 	import Avatar from './Avatar'
 	import Button from './Button'
-	import Comments from './Comments'
+	import CommentSection from './CommentSection'
 	import Gallery from './Gallery'
 	import Inspector from './Inspector'
 	import Link from './Link'
@@ -16,61 +16,62 @@ script.
 		n: 'Toggle Inspect Mode'
 		d: () => inspect = !inspect
 
+svelte:head
+	{#if selected_story}
+		title {feed.name} - {selected_story.title}
+	{:else}
+		title {feed.name}
 main
-	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.justify-start.items-end
-		{#if selected_story}
+	#grid-a.overflow-auto.hide-scrollbar.border-r.border-black.pl-8.py-8.bg-gray-50
+		h1.text-alpha {feed.subdomain}
+		ol.p-0.list-none.border-t-2.border-dashed.border-black
+			{#each feed.data.pages as page}
+				PROMISE(let:v p={page})
+					{#each v as story}
+						li.p-8(on:mousedown={() => selected_story = story})
+							.break-words.cursor-default
+								{#if story instanceof Post}
+									.flex
+										Avatar(feed={story.meta.native_feed})
+										data.text-gray-400(value={story.meta.submit_date.valueOf()}) {story.meta.submit_date.toRelativeString()}
+									{#if story.content.type === 'link'}
+										Link(href={story.content.url.href}) {story.title}
+									{:else if story.content.type === 'feed'}
+										Link(href={story.content.data.href}) {story.title}
+									{:else}
+										span {story.title}
+								{:else if story instanceof Comment}
+									Comment(comment={story})
+								{:else if story instanceof Message}
+									span MESSAGE
+								{:else}
+									.error-tag UNKNOWN ITEM
+									.error-message {String(story)}
+		button.w-48.h-48.text-gray-400.border.border-gray-400 next page
+	{#if selected_story}
+		#grid-s.h-full.overflow-auto.hide-scrollbar.px-20.py-32
+			.text-beta.mb-4 {selected_story.title}
+			.flex.mb-20.text-gray-400
+				span posted {selected_story.meta.submit_date.toRelativeString()} ago by u/{selected_story.author.name}
 			{#if selected_story instanceof Post}
-				{#if selected_story.content.type === 'iframe'}
-					{@html selected_story.content.data}
-				{:else if selected_story.content.type === 'comment'}
-					PROMISE(let:v p={v.content.data})
-						Comments(comments={v})
-				{:else if selected_story.content.type === 'image'}
-					Gallery(images={selected_story.content.data})
-				{:else}
-					article {selected_story.content.data}
+				.mb-20
+					{#if selected_story.content.type === 'iframe'}
+						{@html selected_story.content.data}
+					{:else if selected_story.content.type === 'comment'}
+						CommentSection(comments={selected_story.content.data})
+					{:else if selected_story.content.type === 'image'}
+						Gallery(images={selected_story.content.data})
+					{:else}
+						article.text-gamma {selected_story.content.data}
+				hr
+				CommentSection(comments={selected_story.comments})
 			{:else if selected_story instanceof Comment}
 				p COMMENT
 			{:else if selected_story instanceof Message}
 				p MESSAGE
-	.h-full.flex.flex-col.border.border-black(style='background: gainsboro')
-		.h-64.p-4
-			h1.inline-flex.items-center
-				.w-48.h-24.flex.justify-around.border.border-black.text-beta {feed.domain}
-				.text-alpha.px-4 {feed.subdomain}
-		ol.m-4.p-4.list-none.border-t-2.border-b-2.border-dashed.border-black
-			{#each feed.data.pages as page}
-				PROMISE(let:v p={page})
-					{#each v as story}
-						li.m-4(on:mousedown={() => selected_story = story})
-							.break-words.cursor-default
-								{#if story instanceof Post}
-									.flex.justify-between.items-baseline
-										.text-gray-400
-										span {story.meta.submit_date.toRelativeString()}
-									div
-										{#if true}
-											Avatar(feed={story.meta.native_feed})
-										{:else}
-											span.text-gray-400(style='color: {story.flair.color}') {story.flair.text}
-										.text-beta.text-center
-											{#if story.content.type === 'link'}
-												Link(href={story.content.url.href}) {story.title}
-											{:else if story.content.type === 'feed'}
-												Link(href={story.content.data.href}) {story.title}
-											{:else}
-												span {story.title}
-								{:else if story instanceof Comment}
-									Comment(comment={story})
-								{:else if story instanceof Message}
-								{:else}
-									.error-tag UNKNOWN ITEM
-									.error-message {String(story)}
-	.h-full.overflow-auto.hide-scrollbar.flex.flex-col.items-start.py-16
-		{#if selected_story}
-			{#if selected_story instanceof Post}
-				PROMISE(let:v p={selected_story.comments.data})
-					Comments(comments={v})
+	{#if selected_story}
+		#grid-d.h-full.overflow-auto.py-20
+			#minimap
 	MouseMenu
 	{#if inspect}
 		.fixed.w-screen.h-screen.overflow-auto.py-4.bg-white.text-black
@@ -83,4 +84,14 @@ style.
 		height 100vh
 		display grid
 		grid-template-rows 100%
-		grid-template-columns 43% 14% 43%
+		grid-template-columns 220px 400px 680px 620px
+		grid-template-areas '. a s d'
+	#grid-a
+		grid-area a
+	#grid-s
+		grid-area s
+	#grid-d
+		grid-area d
+	#minimap
+		width 96px
+		height 96px
