--- a/src/views/Score.pug
+++ b/src/views/Score.pug
@@ -1,13 +1,8 @@
 script.
-	export score = 'score unknown'
-	text = switch
-		when score > 0 then '+' + score
-		when score is 0 then '0'
-		else score
+	export score = ''
 
-data(value={score}) {text}
+data.p-4(value={score}) {score}
 
 style.
 	data
-		font-weight bold
-		color indianred
+		font-size 10px
