--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,4 @@
 @import 'iosevka-aile.css';
-@import 'iosevka-etoile.css';
-
 a {
 	color: cornflowerblue;
 	cursor: default;
@@ -9,7 +7,7 @@ a[target='_blank'] {
 	cursor: alias;
 }
 body {
-	font: 12px/16px verdana;
+	font: 12px/1.25 'Iosevka Aile Web';
 }
 menu {
 	margin: 0;
@@ -34,11 +32,14 @@ ul {
 	width: 0;
 }
 .text-alpha {
-	font: 24px/32px verdana;
+	font-size: 24px;
 }
 .text-beta {
-	font: 16px/24px verdana;
+	font-size: 16px;
 }
 .text-gamma {
-	font: 14px/18px verdana;
+	font-size: 14px;
+}
+.text-delta {
+	font-size: 14px;
 }
