--- a/src/views/Main.pug
+++ b/src/views/Main.pug
@@ -1,14 +1,12 @@
 script.
 	import * as Models from '/src/models'
 	import { PROMISE } from './effects'
-	import Avatar from './Avatar'
 	import Button from './Button'
 	import Comment from './Comment'
-	import CommentSection from './CommentSection'
-	import Gallery from './Gallery'
 	import Inspector from './Inspector'
-	import Link from './Link'
 	import MouseMenu from './MouseMenu'
+	import PostBody from './PostBody'
+	import PostHeadline from './PostHeadline'
 	export account = {}
 	export feed = {}
 	selected_story = null
@@ -19,25 +17,27 @@ script.
 
 svelte:head
 	{#if selected_story}
-		title {feed.name} - {selected_story.title}
+		title [{feed.name}] {selected_story.title}
 	{:else}
-		title {feed.name}
+		title [{feed.name}]
 main
-	#grid-s.overflow-auto.hide-scrollbar
-		.h-96.flex.items-center
-			h1.text-alpha {feed.subdomain}
-		ol.p-0.list-none
-			{#each feed.data.pages as page}
-				PROMISE(let:v p={page})
-					{#each v as story}
-						li(on:mousedown={() => selected_story = story})
+	#grid-a.border-r.border-gray-200
+	#grid-s.overflow-auto.hide-scrollbar.border-r.border-gray-200.pl-80
+		.h-96.flex.justify-between.items-center.px-16
+			h1.text-alpha.uppercase {feed.subdomain}
+			PROMISE(let:v p={feed.data.about})
+				img.w-32.h-32(src={v.images.icon})
+		{#each feed.data.pages as page}
+			PROMISE(let:v p={page})
+				ol.list-none.p-0.mb-32
+					{#each v.filter(x => x.meta.stickied) as sticky}
+						li.px-16(on:mousedown={() => selected_story = sticky})
+							PostHeadline(post={sticky})
+				ol.list-none.p-0
+					{#each v.filter(x => !x.meta.stickied) as story}
+						li.px-16(on:mousedown={() => selected_story = story})
 							{#if story instanceof Models.Post}
-								{#if story.content.type === 'image'}
-									img(src={story.content.data[0].best_fit(320, 320).href})
-								.break-words.cursor-default.mt-8.p-8.border.border-black
-									h3 {story.title}
-									.flex.text-gray-400
-										{story.meta.native_feed.name}
+								PostHeadline(post={story} label_feed={feed.name !== story.meta.native_feed.name})
 							{:else if story instanceof Models.Comment}
 								Comment(comment={story})
 							{:else if story instanceof Models.Message}
@@ -46,24 +46,9 @@ main
 								.error-tag UNKNOWN ITEM
 								.error-message {String(story)}
 	{#if selected_story}
-		#grid-d.h-full.overflow-auto.hide-scrollbar.px-20.py-16
-			.text-beta.mb-4 {selected_story.title}
-			.flex.justify-between.mb-8.text-gray-400
-				span u/{selected_story.author.name}
+		#grid-d.h-full.overflow-auto.hide-scrollbar.pl-20.pr-96.py-16
 			{#if selected_story instanceof Models.Post}
-				.mb-12.break-words
-					{#if selected_story.content.type === 'iframe'}
-						{@html selected_story.content.data}
-					{:else if selected_story.content.type === 'comment'}
-						CommentSection(comments={selected_story.content.data})
-					{:else if selected_story.content.type === 'image'}
-						Gallery(images={selected_story.content.data})
-					{:else if selected_story.content.type === 'text'}
-						article.text-delta {selected_story.content.data}
-					{:else}
-						Link(href={selected_story.content.url.href}) {selected_story.content.url.href}
-				hr.mb-4
-				CommentSection(comments={selected_story.comments})
+				PostBody(post={selected_story})
 			{:else if selected_story instanceof Models.Comment}
 				p COMMENT
 			{:else if selected_story instanceof Models.Message}
@@ -80,7 +65,7 @@ style.
 		height 100vh
 		display grid
 		grid-template-rows 100%
-		grid-template-columns 320px 320px 960px
+		grid-template-columns 15% 25% 60%
 		grid-template-areas 'a s d'
 	#grid-a
 		grid-area a
@@ -88,7 +73,3 @@ style.
 		grid-area s
 	#grid-d
 		grid-area d
-		padding-right 120px
-	#minimap
-		width 96px
-		height 96px
