--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,6 @@
-@import 'iosevka-aile.css';
 @font-face {
 	src: url('pixellari.ttf');
-	font-family: 'Custom';
+	font-family: 'Pixellari';
 }
 a {
 	color: cornflowerblue;
@@ -9,8 +8,24 @@ a {
 a[target='_blank'] {
 	cursor: alias;
 }
+blockquote {
+	font-style: italic;
+}
 body {
-	font: 16px/1.5 'Custom';
+	font: 12px/1.5 verdana;
+}
+code {
+	background: gainsboro;
+	padding: 0 1rem;
+}
+h1 {
+	font-weight: bold;
+	text-decoration: underline;
+	margin: 1ch 0;
+}
+h2, h3, h4, h5, h6 {
+	font-weight: bold;
+	margin: 1ch 0;
 }
 iframe {
 	border-radius: 1ch;
@@ -26,9 +41,12 @@ ol {
 	list-style: decimal;
 	padding-left: 4rem;
 }
+p {
+	margin: 1ch 0;
+}
 table {
 	font-size: 10px;
-	margin: 5rem 0;
+	margin: 3rem 0;
 }
 td {
 	padding: 1ch;
@@ -44,10 +62,6 @@ ul {
 	list-style: inherit;
 	padding-left: 4rem;
 }
-* + p,
-* + pre {
-	margin-top: 0.5em;
-}
 .hide-scrollbar {
 	scrollbar-width: none;
 }
@@ -55,14 +69,10 @@ ul {
 	width: 0;
 }
 .text-alpha {
-	font-size: 20px;
-}
-.text-beta {
-	font-size: 16px;
+	font-weight: bold;
+	text-transform: uppercase;
 }
 .text-gamma {
-	font-size: 14px;
 }
 .text-delta {
-	font-size: 14px;
 }
